# cfgr

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  cfgr.py  context.py  filetree.py  ops.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml  release.yml
docs/: plan-2.md
test_data/: .cfgr.yml
test_data/source/: .cfgr.yml  base.ini
test_data/source/subdir/: .cfgr.yml  boilerplate.txt  extension2.cfg
tests/: test_cfgr.py
