[project]
name = "cfgr"
version = "0.9.0"
description = "Config file manager and diff"
authors = [
    { name = "Eric Gustafson", email = "ericg@elfwerks.io" },
]
license = { file = "LICENSE" }
requires-python = ">=3.8"
dependencies = [
    "click>=8.1.1",
    "PyYAML>=6.0.2",
    "pathspec>=0.12.1",
]

[project.urls]
Homepage = "https://github.com/egustafson/cfgr"

[project.scripts]
cfgr = "cfgr:cli"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.9.0",
]

[tool.hatch.build.targets.wheel]
include = [
    "cfgr.py",
    "context.py",
    "filetree.py",
    "ops.py",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
